# nstopwatch2

./: CMakeLists.txt
src/: config_data.c  config_loader.c  config_loader.h  ipc.c  ipc.h  main.c  stopwatch.c  stopwatch.h  time.c  time.h
src/csm/: csm.c  csm.h  daemon.c  daemon.h
src/ui/: icons.h  menu_options.c  ui.c  ui.h
